# MCPM_Workspace

./: .gitignore  AGENTS.md  LICENSE  RDP_VIEWER_AS_LAUNCHER_PLAN.md  README.md  TECHNICAL_REFERENCE.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
.github/workflows/: build.yml
clients/internal-rdp-client/: Cargo.toml  README.md
clients/internal-rdp-client/src/: session.rs  transport.rs  viewer_renderer.rs
clients/internal-rdp-client/src/protocol/: mod.rs  tpkt.rs
experiments/internal-rdp-client/: Cargo.toml  README.md
experiments/internal-rdp-client/src/: config.rs  framebuffer.rs  lib.rs  mvp_runtime.rs  settings_bridge.rs  viewer_input.rs  viewer_renderer.rs
experiments/internal-rdp-client/src/protocol/: x224.rs
scripts/: prepare-internal-rdp-viewer.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_logging.rs  credentials.rs  crypto.rs  database.rs  lib.rs  main.rs  rate_limit.rs  rdp.rs  session_bootstrap.rs  sftp.rs  ssh.rs  ssh_common.rs  ssh_config.rs  storage.rs  sync.rs  system_terminal.rs  telnet.rs  totp.rs  vnc.rs
src/components/: CommandPalette.tsx  CredentialForm.tsx  NewConnectionSplitButton.tsx  SshConfigImportModal.tsx
src/components/Layout/: AppLayout.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/TabBar/: TabBar.tsx
src/components/Terminal/: SshPane.tsx  TerminalPane.tsx
src/components/TotpDisplay/: TotpDisplay.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  Select.tsx  TagBadge.tsx  Textarea.tsx
src/hooks/: useAutoSync.ts
src/lib/: appInfo.ts  backup.ts  csvHostImport.ts  groups.ts  health.ts  hostSearch.ts  i18n.ts  inputSanitizers.ts  internalRdpViewer.ts  logger.ts  masterPasswordSession.ts  notifications.ts  portableState.ts  productivity.ts  secrets.ts  sessionLauncher.ts  sshConfigImport.ts  sync.ts  syncProviders.ts  tagColors.ts  utils.ts  windowMode.ts
src/locales/en-US/: translation.json
src/locales/pt-BR/: translation.json
src/pages/: About.tsx  Backup.tsx  ConnectionLog.tsx  CredentialEditor.tsx  Credentials.tsx  CsvImportPage.tsx  Dashboard.tsx  Groups.tsx  Health.tsx  HostEditor.tsx  LogsPage.tsx  Operations.tsx  RdpPage.tsx  Settings.tsx  SftpPage.tsx  SshKeyEditor.tsx  SshKeys.tsx  Sync.tsx  TerminalPage.tsx  VncPage.tsx
src/store/: connectionLogs.ts  credentials.ts  hosts.ts  sessions.ts  settings.ts  sshKeys.ts  tunnelRuntime.ts  uiStore.ts
src/themes/: index.ts  themes.css
src/types/: index.ts
