[package]
name = "ssh-vault"
version = "0.1.0"
description = "SSH Vault — Gerenciador de conexões SSH com sincronização remota"
authors = ["SSH Vault"]
edition = "2021"

[lib]
name = "ssh_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
dirs = "5"
# Criptografia
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
# TOTP / MFA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
